clang/test/BSC/Negative/OwnedStruct/memoryleak/destructor/owned-struct-ownedtype.cbs
// RUN: %clang_cc1 -verify %s

void * malloc(unsigned long);
void free(void *);

struct A {
        long * _Owned b;
};

_Owned struct S {
_Public:
        short * _Owned x;
        struct A y;
        ~S(S this) {
                free(__move_to_raw(this.x));
        } // expected-error {{destructor for`_Owned struct S` incorrect, this.y.b is of _Owned type and needs to be handled manually}}
};